Sidebar: Set menu's parent before opening it

Without an explicit transient parent we rely on QtWayland guessing which can lead to a menu would open floating in the middle of the screen and have glitched pointer offset.

BUG: 478186